  b - when having pbs_mom re-read the config file, old servers were kept, and pbs_mom
      attempted to communicate with those as well. Now they are cleared and only the 
      new server(s) are contacted. (backported from 3.0.4)
  b - pbsnodes -l can now search on all valid node states (backported from 3.0.4)
  e - Improvements in munge handling of client connections and authentication.


2.5.9
  e - change mom to only log "cannot find nvidia-smi in PATH" once when built
      with --enable-nvidia-gpus and running on a node that does not have Nvidia
      drivers installed.
  b - Change so gpu states get set/unset correctly. Fixes problems with multiple
      exclusive jobs being assigned to same gpu and where next job gets rejected
      because gpu state was not reset after last shared gpu job finished.
  e - Added a 1 millisecond sleep to src/lib/Libnet/net_client.c client_to_svr() 
      if connect fails with EADDRINTUSE EINVAL or EADDRNOTAVAIL case. For these cases
      TORQUE will retry the connect again. This fix increases the chance of success
      on the next iteration.
  b - Changes to decrease some gpu error messages and to detect unusual gpu
      drivers and configurations.
  b - Change so user cannot impersonate a different user when using munge.
  e - Added new option to torque.cfg name TRQ_IFNAME. This allows the user to designate
      a preferred outbound interface for TORQUE requests. The interface is the name 
      of the NIC interface, for example eth0.
  e - Merged revision 4588 from 3.0-fixes. This enables TORQUE to work with root squash
      enabled on nfs shares with prologue and epilogue scripts.
  b - Fixed a problem in Munge where file descriptors were getting left open after failure
      cases and the munge process.
  b - Fixed the display for physmem, availmem and totmem for the linux build. The available
      memory was incorrectly calculated and displayed.